tests/functional/lang/eval-fail/remove.err.exp
error:
       … while evaluating the attribute 'body'
         at /pwd/lang/eval-fail/remove.nix:7:3:
            6|
            7|   body = (removeAttrs attrs [ "x" ]).x;
             |   ^
            8| }

       error: attribute 'x' missing
       at /pwd/lang/eval-fail/remove.nix:7:10:
            6|
            7|   body = (removeAttrs attrs [ "x" ]).x;
             |          ^
            8| }
       Did you mean y?
